@@ -238,70 +238,6 @@ double CTools::differentialEntropy(const CMixtureDistribution<T>& mixture) {
 }
 
 template<typename T>
-void CTools::spread(double a, double b, double separation, T& points) {
-    if (points.empty()) {
-        return;
-    }
-    if (b <= a) {
-        LOG_ERROR(<< "Bad interval [" << a << "," << b << "]");
-        return;
-    }
-
-    std::size_t n = points.size() - 1;
-    if (b - a <= separation * static_cast<double>(n + 1)) {
-        for (std::size_t i = 0u; i <= n; ++i) {
-            setLocation(points[i], a + (b - a) * static_cast<double>(i) /
-                                           static_cast<double>(n));
-        }
-        return;
-    }
-
-    // We can do this in n * log(n) complexity with at most log(n)
-    // passes through the points. Provided the minimum separation
-    // is at least "interval" / "# centres" the problem is feasible.
-    //
-    // We want to find the solution which minimizes the sum of the
-    // distances the points move. This is possible by repeatedly
-    // merging points in to clusters which are within the minimum
-    // separation and then placing clusters at the mean of the
-    // points in the cluster. We repeat this process until no
-    // clusters merge and ensure that the cluster end points are
-    // in [0, interval]. Note that by alternating the direction
-    // of traversal through the points we avoid the worst case n
-    // traversals of the points.
-
-    for (std::size_t i = 0u; a > 0.0 && i <= n; ++i) {
-        points[i] -= a;
-    }
-    std::sort(points.begin(), points.end(), CPointLess());
-
-    bool moved = false;
-    std::size_t iteration = 0u;
-    do {
-        moved = false;
-        bool forward = (iteration++ % 2 == 0);
-        LOG_TRACE(<< (forward ? "forward" : "backward"));
-        CGroup last(forward ? 0 : n, points);
-        for (std::size_t i = 1u; i <= n; ++i) {
-            CGroup test(forward ? i : n - i, points);
-            if (last.overlap(test, separation)) {
-                last.merge(test, separation, 0.0, b - a);
-            } else {
-                moved |= last.spread(separation, points);
-                last = test;
-            }
-        }
-        moved |= last.spread(separation, points);
-    } while (moved && iteration <= n);
-
-    for (std::size_t i = 0u; a > 0.0 && i <= n; ++i) {
-        points[i] += a;
-    }
-
-    LOG_TRACE(<< "# iterations = " << iteration << " # points = " << n + 1);
-}
-
-template<typename T>
 void CTools::inplaceSoftmax(CDenseVector<T>& z) {
     double zmax{z.maxCoeff()};
     z.array() -= zmax;
